Updated echo settings
Updated echo settings.

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -206,13 +206,7 @@ hr {
 <p>This section loads various packages needed by the following code to analyze and process data in the &#39;active.csv&#39; file. The data from this file is loaded into a data frame, and subsequently filtered as appropriate to present the data.</p>
 
 <pre><code class="r">library(data.table)
-</code></pre>
-
-<pre><code>## data.table 1.9.4  For help type: ?data.table
-## *** NB: by=.EACHI is now explicit. See README to restore previous behaviour.
-</code></pre>
-
-<pre><code class="r">library(plyr)
+library(plyr)
 library(stringr)
 library(lattice)
 
